fixed export data

--- a/program/src/static/css/records.css
+++ b/program/src/static/css/records.css
@@ -133,4 +133,8 @@ thead tr button{
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	align-items: center;
+}
+#totalNet {
+	font-size: x-large;
 }
